--- a/SmartDialer/SmartDialer/Base.lproj/Main.storyboard
+++ b/SmartDialer/SmartDialer/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="i3v-qL-QLS" userLabel="Contacts Table View">
-                                <rect key="frame" x="0.0" y="64" width="375" height="548"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="553"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
@@ -31,31 +31,34 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dkt-bn-GrB" id="Jz5-lL-jWP">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="54.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rlg-MX-RZH">
-                                                    <rect key="frame" x="0.0" y="0.0" width="59.5" height="59.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="54.5" height="54.5"/>
                                                     <color key="backgroundColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.77647058820000003" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="Rlg-MX-RZH" secondAttribute="height" multiplier="1:1" id="bXg-aU-gQE"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="bottomLeft" text="John Appleseed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ol-Wc-5jg" userLabel="Name Label">
-                                                    <rect key="frame" x="67.5" y="4" width="171" height="31"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <rect key="frame" x="62.5" y="4" width="217" height="28"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" text="0766529472" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ryb-7J-2cV" userLabel="Phone Label">
-                                                    <rect key="frame" x="67.5" y="35" width="171" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <rect key="frame" x="62.5" y="32" width="217" height="17.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Today, 23 March" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="31l-BV-VM4" userLabel="Date Label">
-                                                    <rect key="frame" x="246.5" y="0.0" width="120.5" height="59.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Today, 23 March" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="31l-BV-VM4" userLabel="Date Label">
+                                                    <rect key="frame" x="287.5" y="0.0" width="72.5" height="54.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="31l-BV-VM4" secondAttribute="height" multiplier="4:3" id="SQb-mE-jCl"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -63,17 +66,17 @@
                                             <constraints>
                                                 <constraint firstItem="ryb-7J-2cV" firstAttribute="width" secondItem="3ol-Wc-5jg" secondAttribute="width" id="0SI-y2-xNq"/>
                                                 <constraint firstItem="31l-BV-VM4" firstAttribute="top" secondItem="Jz5-lL-jWP" secondAttribute="top" id="1xi-oG-Db4"/>
-                                                <constraint firstItem="31l-BV-VM4" firstAttribute="centerY" secondItem="Jz5-lL-jWP" secondAttribute="centerY" id="2SP-A6-nz0"/>
+                                                <constraint firstAttribute="bottom" secondItem="31l-BV-VM4" secondAttribute="bottom" id="BgY-d8-Upz"/>
                                                 <constraint firstAttribute="bottom" secondItem="Rlg-MX-RZH" secondAttribute="bottom" id="Fe1-4z-bGu"/>
                                                 <constraint firstItem="ryb-7J-2cV" firstAttribute="top" secondItem="3ol-Wc-5jg" secondAttribute="bottom" id="HTT-op-txf"/>
                                                 <constraint firstItem="31l-BV-VM4" firstAttribute="leading" secondItem="ryb-7J-2cV" secondAttribute="trailing" constant="8" id="NTN-f7-lLe"/>
                                                 <constraint firstItem="Rlg-MX-RZH" firstAttribute="leading" secondItem="Jz5-lL-jWP" secondAttribute="leading" id="O9h-d3-Yya"/>
                                                 <constraint firstItem="Rlg-MX-RZH" firstAttribute="top" secondItem="Jz5-lL-jWP" secondAttribute="top" id="Q52-Zc-jpI"/>
                                                 <constraint firstItem="3ol-Wc-5jg" firstAttribute="height" secondItem="ryb-7J-2cV" secondAttribute="height" constant="10" id="Sdu-Cy-gk8"/>
-                                                <constraint firstAttribute="trailing" secondItem="31l-BV-VM4" secondAttribute="trailing" constant="8" id="YBU-Yw-Efn"/>
+                                                <constraint firstAttribute="trailing" secondItem="31l-BV-VM4" secondAttribute="trailing" constant="15" id="YBU-Yw-Efn"/>
                                                 <constraint firstItem="ryb-7J-2cV" firstAttribute="leading" secondItem="3ol-Wc-5jg" secondAttribute="leading" id="hvd-g2-6Hb"/>
                                                 <constraint firstItem="3ol-Wc-5jg" firstAttribute="top" secondItem="Jz5-lL-jWP" secondAttribute="top" constant="4" id="klu-Ye-Dxb"/>
-                                                <constraint firstAttribute="bottom" secondItem="ryb-7J-2cV" secondAttribute="bottom" constant="4" id="mtW-SH-f9E"/>
+                                                <constraint firstAttribute="bottom" secondItem="ryb-7J-2cV" secondAttribute="bottom" constant="5" id="mtW-SH-f9E"/>
                                                 <constraint firstItem="3ol-Wc-5jg" firstAttribute="leading" secondItem="Rlg-MX-RZH" secondAttribute="trailing" constant="8" id="oqa-pL-bqp"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -91,7 +94,7 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r6E-VC-0EK" userLabel="Input Container View">
-                                <rect key="frame" x="0.0" y="612" width="375" height="55"/>
+                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NBV-6p-opK" userLabel="Top Separator View">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
@@ -101,35 +104,48 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ReS-zX-FGL" userLabel="Bottom Separator View">
-                                        <rect key="frame" x="0.0" y="54" width="375" height="1"/>
+                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
                                         <color key="backgroundColor" red="0.73333333329999995" green="0.73333333329999995" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="YVM-TQ-HMa"/>
                                         </constraints>
                                     </view>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search for contacts here" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="U0o-nG-cpg" userLabel="Input Text Field">
-                                        <rect key="frame" x="8" y="2" width="359" height="51"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search contacts" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U0o-nG-cpg" userLabel="Input Text Field">
+                                        <rect key="frame" x="15" y="2" width="302" height="46"/>
                                         <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                         <textInputTraits key="textInputTraits" keyboardType="phonePad" keyboardAppearance="light"/>
                                         <connections>
                                             <action selector="textFieldTextDidChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="E15-j2-YGh"/>
                                         </connections>
                                     </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8vq-zF-tJl" userLabel="Call Button">
+                                        <rect key="frame" x="325" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="8vq-zF-tJl" secondAttribute="height" multiplier="1:1" id="s3C-f7-mMr"/>
+                                        </constraints>
+                                        <state key="normal" image="call_icon"/>
+                                        <connections>
+                                            <action selector="callButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BvQ-Dg-NNl"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="ReS-zX-FGL" firstAttribute="leading" secondItem="r6E-VC-0EK" secondAttribute="leading" id="ATP-Tc-PEh"/>
+                                    <constraint firstAttribute="bottom" secondItem="8vq-zF-tJl" secondAttribute="bottom" constant="5" id="GKD-9W-h23"/>
+                                    <constraint firstItem="8vq-zF-tJl" firstAttribute="leading" secondItem="U0o-nG-cpg" secondAttribute="trailing" constant="8" id="JyO-W5-MlZ"/>
                                     <constraint firstAttribute="trailing" secondItem="NBV-6p-opK" secondAttribute="trailing" id="NFI-rK-XMI"/>
-                                    <constraint firstAttribute="trailing" secondItem="U0o-nG-cpg" secondAttribute="trailing" constant="8" id="YQY-D1-7lg"/>
                                     <constraint firstItem="U0o-nG-cpg" firstAttribute="top" secondItem="r6E-VC-0EK" secondAttribute="top" constant="2" id="anA-Ld-9pX"/>
                                     <constraint firstItem="NBV-6p-opK" firstAttribute="top" secondItem="r6E-VC-0EK" secondAttribute="top" id="b1P-gD-h07"/>
+                                    <constraint firstItem="8vq-zF-tJl" firstAttribute="top" secondItem="r6E-VC-0EK" secondAttribute="top" constant="5" id="eKe-BB-8Zi"/>
                                     <constraint firstAttribute="trailing" secondItem="ReS-zX-FGL" secondAttribute="trailing" id="maT-D9-A2H"/>
-                                    <constraint firstAttribute="height" constant="55" id="n6Z-46-fwP"/>
-                                    <constraint firstItem="U0o-nG-cpg" firstAttribute="leading" secondItem="r6E-VC-0EK" secondAttribute="leading" constant="8" id="rTG-cn-2rH"/>
+                                    <constraint firstAttribute="height" constant="50" id="n6Z-46-fwP"/>
+                                    <constraint firstItem="U0o-nG-cpg" firstAttribute="leading" secondItem="r6E-VC-0EK" secondAttribute="leading" constant="15" id="rTG-cn-2rH"/>
                                     <constraint firstAttribute="bottom" secondItem="U0o-nG-cpg" secondAttribute="bottom" constant="2" id="t0A-PN-1eN"/>
                                     <constraint firstItem="NBV-6p-opK" firstAttribute="leading" secondItem="r6E-VC-0EK" secondAttribute="leading" id="tbf-vU-FAq"/>
                                     <constraint firstAttribute="bottom" secondItem="ReS-zX-FGL" secondAttribute="bottom" id="vXW-zO-ogS"/>
+                                    <constraint firstAttribute="trailing" secondItem="8vq-zF-tJl" secondAttribute="trailing" constant="10" id="zEC-1C-jGX"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -174,4 +190,7 @@
             <point key="canvasLocation" x="24.800000000000001" y="36.431784107946029"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="call_icon" width="360" height="360"/>
+    </resources>
 </document>
