--- a/SmartDialer/SmartDialer/Base.lproj/Main.storyboard
+++ b/SmartDialer/SmartDialer/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="PDa-qI-nFU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="PDa-qI-nFU">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -65,6 +64,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="ryb-7J-2cV" firstAttribute="width" secondItem="3ol-Wc-5jg" secondAttribute="width" id="0SI-y2-xNq"/>
+                                                <constraint firstItem="31l-BV-VM4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="3ol-Wc-5jg" secondAttribute="trailing" constant="8" symbolic="YES" id="0xE-a0-BfW"/>
                                                 <constraint firstItem="31l-BV-VM4" firstAttribute="top" secondItem="Jz5-lL-jWP" secondAttribute="top" id="1xi-oG-Db4"/>
                                                 <constraint firstAttribute="bottom" secondItem="31l-BV-VM4" secondAttribute="bottom" id="BgY-d8-Upz"/>
                                                 <constraint firstAttribute="bottom" secondItem="Rlg-MX-RZH" secondAttribute="bottom" id="Fe1-4z-bGu"/>
@@ -178,7 +178,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PDa-qI-nFU" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="F9C-zU-sIN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
